Made Change to include ALT tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div> <!--End of row div-->
       <div class="row">
         <div class="col-md-5">
-          <div><img src="images/mug.png" class="img-responsive"></div>
+          <div><img src="images/mug.png" class="img-responsive" alt="Udacity Mug"></div>
           <div class="left-box">
             <h2><strong>Main Features</strong></h2>
             <ul>
